--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .content {
-  height: 911px;
+  height: 100%;
   display: block;
   justify-content: center;
   align-items: center;
@@ -10,11 +10,21 @@
 mat-sidenav {
   width: 300px;
   border-right: none;
-  background: whitesmoke;
+  background: rgb(236, 239, 244);
   color: black;
   text-align: center;
 }
 
 mat-sidenav-container {
-  height:100%
+  height: 100%
+}
+
+::ng-deep {
+  mat-toolbar {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    height: 90px !important;
+    background-color: rgb(250, 250, 250) !important;
+  }
 }
